--- a/assets/css/services.css
+++ b/assets/css/services.css
@@ -11,8 +11,8 @@ html, body {
 }
 
 .banner {
-  background-color: rgb(51, 51, 51);
-  background-image: url('https://img.freepik.com/premium-photo/male-hands-typing-computer-keyboard-service-concept_220873-10434.jpg?ga=GA1.1.860952126.1749829977&semt=ais_hybrid&w=740');
+	background: linear-gradient(120deg, #23243a 0%, #2a2c3b 50%, #0056b3 100%);
+  /* background-image: url('https://img.freepik.com/premium-photo/male-hands-typing-computer-keyboard-service-concept_220873-10434.jpg?ga=GA1.1.860952126.1749829977&semt=ais_hybrid&w=740'); */
   background-size: cover;
   background-position: center;
   height: 20em;
