--- a/assets/css/contact.css
+++ b/assets/css/contact.css
@@ -161,7 +161,7 @@ form button:hover {
 }
 .footer h4 {
 	font-size: 18px;
-	color: #51c2b9;
+	color: red;
 	margin-bottom: 15px;
 }
 .footer p, .footer ul, .footer a {
@@ -178,7 +178,7 @@ form button:hover {
 	margin-bottom: 10px;
 }
 .footer ul li a {
-	color: #51c2b9;
+	color: red;
 	text-decoration: none;
 }
 .footer ul li a:hover {
