--- a/assets/css/services.css
+++ b/assets/css/services.css
@@ -236,7 +236,7 @@ h3{
 }
 .footer h4 {
 	font-size: 18px;
-	color: #51c2b9;
+	color: red;
 	margin-bottom: 15px;
 }
 .footer p, .footer ul, .footer a {
@@ -253,7 +253,7 @@ h3{
 	margin-bottom: 10px;
 }
 .footer ul li a {
-	color: #51c2b9;
+	color: red;
 	text-decoration: none;
 }
 .footer ul li a:hover {
