--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -49,13 +49,7 @@ section{
 	margin-bottom: 100px;
 }
 .title:after{
-	content: '';
-	height: 5px;
-	width: 40px;
-	background-color: #62aa94;
-	position: absolute;
-	top: 81px;
-	left: calc(50% - 20px);
+	display: none;
 }
 
 /*Bootstrap*/
